[gd_scene load_steps=9 format=3 uid="uid://dejku7a7ai44s"]

[ext_resource type="Script" uid="uid://4hkgjhyuer0i" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://wxwoyw1td3sg" path="res://enviroment.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cryt5e3qbpu3d" path="res://player.gd" id="3_h2yge"]
[ext_resource type="Script" uid="uid://dpjs8hbhidome" path="res://Player/Stats/PlayerStats.gd" id="4_272bh"]
[ext_resource type="Script" uid="uid://ojm3slyhjvg2" path="res://Player/Stamina/StaminaSystem.gd" id="5_5vw27"]
[ext_resource type="Script" uid="uid://cmwb2x6tphwmp" path="res://Player/Movement/PlayerMovement.gd" id="6_kek77"]
[ext_resource type="Script" uid="uid://d1m18dm5lb8vx" path="res://Player/Visual/PlayerVisual.gd" id="7_4c57u"]
[ext_resource type="Script" uid="uid://d1n6fjt5bhqxr" path="res://PlayerInventory.gd" id="9_kek77"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Enviroment" type="Node2D" parent="."]
script = ExtResource("1_ig7tw")

[node name="Player" type="Node2D" parent="."]
script = ExtResource("3_h2yge")

[node name="PlayerStats" type="Node2D" parent="Player"]
script = ExtResource("4_272bh")

[node name="StaminaSystem" type="Node2D" parent="Player"]
script = ExtResource("5_5vw27")

[node name="PlayerMovement" type="Node2D" parent="Player"]
script = ExtResource("6_kek77")

[node name="PlayerVisual" type="Node2D" parent="Player"]
script = ExtResource("7_4c57u")

[node name="PlayerInventory" type="Node" parent="Player"]
script = ExtResource("9_kek77")
